# libtt

./: .gitignore  CMakeLists.txt  doxy.config  gen.tcl  internal.h  itab.h  mem.h  mem.spec  mem.spec.tcl
doc/: main.dox  structure.dot
src/: itab.c  mem.c
test/: itab.c  main.c  mem.c
